# Roboscrub

./: appspec.yml
Roboscrub_ws/src/database/database/: CMakeLists.txt
Roboscrub_ws/src/database/database/include/database/: DatabaseHelper.h
Roboscrub_ws/src/database/db_msgs/srv/: AddPlan.srv  AddZone.srv  Delete.srv
Roboscrub_ws/src/launcher/launcher_msgs/: CMakeLists.txt
Roboscrub_ws/src/launcher/launcher_state_machine/include/launcher_state_machine/: Mapping.h  ScrubberStates.h  StateMachine.h
Roboscrub_ws/src/launcher/launcher_state_machine/src/: ScrubberStates.cpp
Roboscrub_ws/src/mapper/: README.md
Roboscrub_ws/src/mapper/launch/: mapper_cartographer_localization.launch
Roboscrub_ws/src/navigator/: CMakeLists.txt
Roboscrub_ws/src/navigator/param/: dwa_local_planner_params.yaml  local_costmap_params.yaml
Roboscrub_ws/src/navigator/rviz/: navigator_mbf.rviz
Roboscrub_ws/src/operator/: CMakeLists.txt
Roboscrub_ws/src/scrubber/scrubber/: CMakeLists.txt  package.xml
Roboscrub_ws/src/scrubber/scrubber/include/scrubber/: Scrubber.h
src/database/database/db/: test.db
src/database/database/src/: DatabaseHelper.cpp
src/database/db_msgs/: CMakeLists.txt
src/database/db_msgs/srv/: GetMap.srv  GetZone.srv  GetZoneInMap.srv  Rename.srv
src/launcher/launcher_msgs/msg/: MissionGoal.msg
src/launcher/launcher_state_machine/: CMakeLists.txt
src/launcher/launcher_state_machine/include/launcher_state_machine/: Automatic.h
src/launcher/launcher_state_machine/launch/: scrubber_launcher.launch
src/launcher/launcher_state_machine/src/: Automatic.cpp  StateMachine.cpp
src/mapper/launch/: mapper_cartographer.launch
src/navigator/launch/: move_base_flex.launch  navigator.launch
src/navigator/param/: costmap_common_params.yaml
src/operator/: package.xml
src/scrubber/: CMakeLists.txt  package.xml
src/scrubber/scrubber/src/: Scrubber.cpp
src/scrubber/scrubber_msgs/srv/: GetCleanConfig.srv  SetCleanConfig.srv
